--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,13 @@
     </parent>
     <groupId>com.fbi.engine</groupId>
     <artifactId>flair-engine</artifactId>
-    <version>2.4.1</version>
+    <version>2.4.2-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>flair-engine</name>
     <scm>
         <connection>scm:git:https://github.com/viz-centric/flair-engine.git</connection>
         <developerConnection>scm:git:https://github.com/viz-centric/flair-engine.git</developerConnection>
-        <tag>v2.4.1</tag>
+        <tag>HEAD</tag>
         <url>https://github.com/viz-centric/flair-engine.git</url>
     </scm>
     <distributionManagement>
