hikari connection pool

--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -59,7 +59,7 @@ spring:
 
 liquibase:
     contexts: dev
-    drop-first: true
+    drop-first: false
 
 
 # ===================================================================
