--- a/plugins-core/pom.xml
+++ b/plugins-core/pom.xml
@@ -39,6 +39,12 @@
 			<version>2.6</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.zaxxer</groupId>
+			<artifactId>HikariCP</artifactId>
+			<version>3.4.2</version>
+		</dependency>
+
 	</dependencies>
 
 
