Removed unnecessery files, fixed dockerfile for postgres

--- a/distribution/src/main/docker/Dockerfile
+++ b/distribution/src/main/docker/Dockerfile
@@ -53,4 +53,4 @@ RUN chmod +x /bin/grpc_health_probe
 USER flairuser
 CMD echo "The application will start in ${JHIPSTER_SLEEP}s..." && \
     sleep ${JHIPSTER_SLEEP} && \
-    java ${JAVA_OPTS} -Djava.security.egd=file:/dev/./urandom -jar /app/app.war
+    java ${JAVA_OPTS} -Djava.security.egd=file:/dev/./urandom -jar /app/app.jar
