--- a/app/pom.xml
+++ b/app/pom.xml
@@ -1,7 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8" ?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -27,14 +25,8 @@
 		<jzlib.version>1.1.3</jzlib.version>
 		<postgresql.version>42.2.10</postgresql.version>
 		<!-- Build properties -->
-		<maven.version>3.3.9</maven.version>
-		<java.version>1.8</java.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<project.testresult.directory>${project.build.directory}/test-results</project.testresult.directory>
-		<maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
-		<maven.compiler.source>${java.version}</maven.compiler.source>
-		<maven.compiler.target>${java.version}</maven.compiler.target>
+		
 		<argLine>-Djava.security.egd=file:/dev/./urandom -Xmx256m</argLine>
 		<m2e.apt.activation>jdt_apt</m2e.apt.activation>
 		<run.addResources>false</run.addResources>
@@ -47,72 +39,32 @@
 		<!-- Dependency versions -->
 		<jhipster-dependencies.version>3.3.0</jhipster-dependencies.version>
 		<!-- The spring-boot version should match the one managed by https://mvnrepository.com/artifact/io.github.jhipster/jhipster-dependencies/${jhipster-dependencies.version} -->
-		<spring-boot.version>2.2.4.RELEASE</spring-boot.version>
+		<spring-boot.version>2.2.6.RELEASE</spring-boot.version>
 		<!-- The spring framework version should match the one managed by https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-dependencies/${spring-boot.version} -->
-		<spring.version>5.2.3.RELEASE</spring.version>
+		<spring.version>5.2.5.RELEASE</spring.version>
 		<spring-cloud.version>Hoxton.M2</spring-cloud.version>
 		<!-- The hibernate version should match the one managed by https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-dependencies/${spring-boot.version} -->
-		<hibernate.version>5.3.14.Final</hibernate.version>
+		<hibernate.version>5.4.12.Final</hibernate.version>
 		<!-- The javassist version should match the one managed by https://mvnrepository.com/artifact/org.hibernate/hibernate-core/${hibernate.version} -->
 		<javassist.version>3.23.2-GA</javassist.version>
 		<!-- The liquibase version should match the one managed by https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-dependencies/${spring-boot.version} -->
-		<liquibase.version>3.8.6</liquibase.version>
+		<liquibase.version>3.24.0-GA</liquibase.version>
 		<liquibase-hibernate5.version>3.8</liquibase-hibernate5.version>
 
 		<!-- The hibernate version to be used to override default version of liquibase 
 			maven plugin -->
-		<hibernate-core.version>5.3.8.Final</hibernate-core.version>
+		<hibernate-core.version>5.4.12.Final</hibernate-core.version>
 		<validation-api.version>2.0.1.Final</validation-api.version>
 		<jaxb-runtime.version>2.3.2</jaxb-runtime.version>
 		<archunit-junit5.version>0.12.0</archunit-junit5.version>
 		<mapstruct.version>1.3.1.Final</mapstruct.version>
-		<!-- Plugin versions -->
-		<maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
-		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-		<maven-javadoc-plugin.version>3.1.1</maven-javadoc-plugin.version>
-		<maven-eclipse-plugin.version>2.10</maven-eclipse-plugin.version>
-		<maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
-		<maven-failsafe-plugin.version>3.0.0-M4</maven-failsafe-plugin.version>
-		<maven-idea-plugin.version>2.2.1</maven-idea-plugin.version>
-		<maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
-		<maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
-		<maven-war-plugin.version>3.2.3</maven-war-plugin.version>
-		<maven-checkstyle.version>3.1.0</maven-checkstyle.version>
-		<checkstyle.version>8.27</checkstyle.version>
-		<spring-nohttp-checkstyle.version>0.0.4.RELEASE</spring-nohttp-checkstyle.version>
-		<git-commit-id-plugin.version>4.0.0</git-commit-id-plugin.version>
-		<jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
-		<jib-maven-plugin.version>1.8.0</jib-maven-plugin.version>
-		<lifecycle-mapping.version>1.0.0</lifecycle-mapping.version>
-		<properties-maven-plugin.version>1.0.0</properties-maven-plugin.version>
-		<sonar-maven-plugin.version>3.7.0.1746</sonar-maven-plugin.version>
-		<jacoco.utReportFolder>${project.build.directory}/jacoco/test</jacoco.utReportFolder>
-		<jacoco.utReportFile>${jacoco.utReportFolder}/test.exec</jacoco.utReportFile>
-		<jacoco.itReportFolder>${project.build.directory}/jacoco/integrationTest</jacoco.itReportFolder>
-		<jacoco.itReportFile>${jacoco.itReportFolder}/integrationTest.exec</jacoco.itReportFile>
-		<junit.utReportFolder>${project.testresult.directory}/test</junit.utReportFolder>
-		<junit.itReportFolder>${project.testresult.directory}/integrationTest</junit.itReportFolder>
 
-		<pf4j.version>2.3.0</pf4j.version>
-		<pf4j-spring.version>0.5.0</pf4j-spring.version>
-		<docker-maven-plugin.version>0.33.0</docker-maven-plugin.version>
-		<maven-release-plugin.version>2.5.3</maven-release-plugin.version>
-		<maven-scm-provider-gitexe.version>1.9.5</maven-scm-provider-gitexe.version>
-		<maven-source-plugin.version>3.0.1</maven-source-plugin.version>
-		<apache-httpclient.version>4.5</apache-httpclient.version>
-		<assertj.version>3.6.2</assertj.version>
 		<!-- Overridden to get metrics-jcache -->
-
-
-		<grpc-spring-boot-starter.version>3.5.2</grpc-spring-boot-starter.version>
+		<grpc-spring-boot-starter.version>3.5.3</grpc-spring-boot-starter.version>
 		<project.scm.id>github-credentials</project.scm.id>
 
 		<!-- our dependencies -->
-		<flair-messages.version>0.3.11</flair-messages.version>
-		<flair-query-language.version>1.6.21</flair-query-language.version>
-		<project-bi-common.version>1.4.6</project-bi-common.version>
-		<all-grpc.version>1.27.2</all-grpc.version>
-		<lombok.version>1.18.8</lombok.version>
+		<all-grpc.version>1.28.1</all-grpc.version>
 
 	</properties>
 	<dependencyManagement>
@@ -189,6 +141,7 @@
 		<dependency>
 			<groupId>io.github.lognet</groupId>
 			<artifactId>grpc-spring-boot-starter</artifactId>
+			<version>${grpc-spring-boot-starter.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>io.grpc</groupId>
