--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.4.RELEASE</version>
+		<version>2.2.6.RELEASE</version>
 		<relativePath />
 	</parent>
 
@@ -57,7 +55,9 @@
 
 		<lombok.version>1.18.8</lombok.version>
 
-		<testcontainers.version>1.12.4</testcontainers.version>
+		<testcontainers.version>1.14.0</testcontainers.version>
+		<pf4j.version>3.2.0</pf4j.version>
+		<pf4j-spring.version>0.6.0</pf4j-spring.version>
 
 		<plugin.id />
 		<plugin.class />
@@ -79,7 +79,7 @@
 			<dependency>
 				<groupId>org.pf4j</groupId>
 				<artifactId>pf4j-spring</artifactId>
-				<version>0.5.0</version>
+				<version>${pf4j-spring.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
@@ -121,9 +121,7 @@
 							<phase>package</phase>
 							<configuration>
 								<target>
-									<unzip
-										src="target/${project.artifactId}-${project.version}.${project.packaging}"
-										dest="target/plugin-classes" />
+									<unzip src="target/${project.artifactId}-${project.version}.${project.packaging}" dest="target/plugin-classes" />
 								</target>
 							</configuration>
 							<goals>
