--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.fbi.engine</groupId>
@@ -27,32 +25,66 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-		<spring-boot.version>1.5.20.RELEASE</spring-boot.version>
+		
+		<spring-boot.version>2.2.6.RELEASE</spring-boot.version>
+		<lombok.version>1.18.12</lombok.version>
 
-		<lombok.version>1.18.8</lombok.version>
+		<pf4j.version>3.2.0</pf4j.version>
+		<pf4j-spring.version>0.6.0</pf4j-spring.version>
 
-		<pf4j.version>2.3.0</pf4j.version>
-		<pf4j-spring.version>0.5.0</pf4j-spring.version>
+		<testcontainers.version>1.14.0</testcontainers.version>
 
-		<flair-messages.version>0.3.9</flair-messages.version>
-		<flair-query-language.version>1.6.18</flair-query-language.version>
-		<project-bi-common.version>1.4.4</project-bi-common.version>
+		<flair-messages.version>0.3.12</flair-messages.version>
+		<flair-query-language.version>1.6.22</flair-query-language.version>
+		<project-bi-common.version>1.4.7</project-bi-common.version>
 
 		<java.version>1.8</java.version>
-		<maven.version>3.0.0</maven.version>
+
+		<!-- Plugin versions -->
+		<maven.version>3.3.9</maven.version>
+		<maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
 		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-		<maven-enforcer-plugin.version>3.0.0-M2</maven-enforcer-plugin.version>
+		<maven-javadoc-plugin.version>3.1.1</maven-javadoc-plugin.version>
+		<maven-eclipse-plugin.version>2.10</maven-eclipse-plugin.version>
+		<maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
+		<maven-failsafe-plugin.version>3.0.0-M4</maven-failsafe-plugin.version>
+		<maven-idea-plugin.version>2.2.1</maven-idea-plugin.version>
 		<maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
+		<maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
+		<maven-war-plugin.version>3.2.3</maven-war-plugin.version>
+		<maven-checkstyle.version>3.1.0</maven-checkstyle.version>
 		<maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 		<maven-release-plugin.version>2.5.3</maven-release-plugin.version>
 		<maven-scm-provider-gitexe.version>1.9.5</maven-scm-provider-gitexe.version>
 		<maven-source-plugin.version>3.0.1</maven-source-plugin.version>
-		<maven-javadoc-plugin.version>3.0.1</maven-javadoc-plugin.version>
 
-		<testcontainers.version>1.12.4</testcontainers.version>
+		<checkstyle.version>8.27</checkstyle.version>
+		<spring-nohttp-checkstyle.version>0.0.4.RELEASE</spring-nohttp-checkstyle.version>
+		<git-commit-id-plugin.version>4.0.0</git-commit-id-plugin.version>
+		<jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
+		<jib-maven-plugin.version>1.8.0</jib-maven-plugin.version>
+		<lifecycle-mapping.version>1.0.0</lifecycle-mapping.version>
+		<properties-maven-plugin.version>1.0.0</properties-maven-plugin.version>
+		<sonar-maven-plugin.version>3.7.0.1746</sonar-maven-plugin.version>
+
+		<docker-maven-plugin.version>0.33.0</docker-maven-plugin.version>
+		<apache-httpclient.version>4.5</apache-httpclient.version>
+
+
+		<!-- test -->
+		<assertj.version>3.6.2</assertj.version>
+		<jacoco.utReportFolder>${project.build.directory}/jacoco/test</jacoco.utReportFolder>
+		<jacoco.utReportFile>${jacoco.utReportFolder}/test.exec</jacoco.utReportFile>
+		<jacoco.itReportFolder>${project.build.directory}/jacoco/integrationTest</jacoco.itReportFolder>
+		<jacoco.itReportFile>${jacoco.itReportFolder}/integrationTest.exec</jacoco.itReportFile>
+		<junit.utReportFolder>${project.testresult.directory}/test</junit.utReportFolder>
+		<junit.itReportFolder>${project.testresult.directory}/integrationTest</junit.itReportFolder>
+
+
 	</properties>
 
 	<distributionManagement>
