Added spring app name

--- a/app/src/main/resources/config/bootstrap.yml
+++ b/app/src/main/resources/config/bootstrap.yml
@@ -8,6 +8,8 @@ jhipster:
     password: admin
 
 spring:
+  application:
+    name: flairengine
   profiles:
     # The commented value for `active` can be replaced with valid Spring profiles to load.
     # Otherwise, it will be filled in by maven when building the JAR file
