--- a/app/pom.xml
+++ b/app/pom.xml
@@ -52,7 +52,8 @@
 		<javassist.version>3.23.2-GA</javassist.version>
 		<!-- The liquibase version should match the one managed by https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-dependencies/${spring-boot.version} -->
 		<liquibase.version>3.5.3</liquibase.version>
-		<liquibase-hibernate5.version>3.8</liquibase-hibernate5.version>
+		<liquibase-hibernate5.version>3.6</liquibase-hibernate5.version>
+		<liquibase-slf4j.version>2.0.0</liquibase-slf4j.version>
 
 		<!-- The hibernate version to be used to override default version of liquibase 
 			maven plugin -->
@@ -989,8 +990,8 @@
 						<driver>org.postgresql.Driver</driver>
 						<url>jdbc:postgresql://localhost:5432/flairengine</url>
 						<defaultSchemaName></defaultSchemaName>
-						<username>flairengine</username>
-						<password></password>
+						<username>postgres</username>
+						<password>admin</password>
 						<referenceUrl>hibernate:spring:com.fbi.engine.domain?dialect=io.github.jhipster.domain.util.FixedPostgreSQL95Dialect&amp;hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy&amp;hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy</referenceUrl>
 						<verbose>true</verbose>
 						<logging>debug</logging>
@@ -1041,6 +1042,11 @@
 							<groupId>org.springframework</groupId>
 							<artifactId>spring-beans</artifactId>
 							<version>${spring.version}</version>
+						</dependency>
+						<dependency>
+							<groupId>com.mattbertolini</groupId>
+							<artifactId>liquibase-slf4j</artifactId>
+							<version>${liquibase-slf4j.version}</version>
 						</dependency>
 					</dependencies>
 				</plugin>
